--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	    <link type="text/css" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-        <link rel="stylesheet" type="text/css" href="https://www.wedsite.com/180208/css/wedsitecom.css">
+        <link rel="stylesheet" type="text/css" href="180208/css/wedsitecom.css">
 		
 		 <!-- Favicon and touch icons -->
 		 <link rel="icon" type="image/x-ico" href="images/Favicon.png">
