--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 document.write('<script src="#\180208\js\jquery-3.2.1.min.js"><\/script><script src="#\180208\js\jquery-ui-1.12.1.min.js"><\/script>'); 
             }
         </script>
-        <script src="https://www.wedsite.com/180208/js/wedsitecomtop.js"></script>
+        <script src="180208/js/wedsitecomtop.js"></script>
     </head><body> 
     <!--<div class="loader">
     <img id="loaderFlower" src="images/WedsiteFlower.png"/>
@@ -2139,6 +2139,6 @@ $.post("guestbook.php",
 </footer>
 </body>    
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>
-<script src="https://www.wedsite.com/180208/js/wedsitecombottom.js"></script>
+<script src="180208/js/wedsitecombottom.js"></script>
 
 </html>
