--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	    <link type="text/css" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-        <link rel="stylesheet" type="text/css" href="180208/css/wedsitecom.css">
+        <link rel="stylesheet" type="text/css" href="https://www.wedsite.com/180217/css/wedsitecom.css">
 		
 		 <!-- Favicon and touch icons -->
 		 <link rel="icon" type="image/x-ico" href="images/Favicon.png">
@@ -2139,6 +2139,6 @@ $.post("guestbook.php",
 </footer>
 </body>    
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>
-<script src="180208/js/wedsitecombottom.js"></script>
+<script src="https://www.wedsite.com/180217/js/wedsitecombottom.js"></script>
 
 </html>
