--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 document.write('<script src="#\180305\js\jquery-3.2.1.min.js"><\/script><script src="#\180305\js\jquery-ui-1.12.1.min.js"><\/script>'); 
             }
         </script>
-        <script src="https://www.wedsite.com/180305/js/wedsitecomtop.js"></script>
+        <script src="http://wedding.mkdevelopers.co.in/180208/js/wedsitecomtop.js"></script>
     </head><body> 
     <!--<div class="loader">
     <img id="loaderFlower" src="images/WedsiteFlower.png"/>
