--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<script>var versionFolder = '/180208/'</script><html lang="en">
+<html lang="en">
 <head>
   <!--=============================================== 
      Website Developed By MK Developers.
@@ -18,7 +18,7 @@
 
 	    <link type="text/css" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-        <link rel="stylesheet" type="text/css" href="https://www.wedsite.com/180305/css/wedsitecom.css">
+        <link rel="stylesheet" type="text/css" href="180208/css/wedsitecom.css">
 		
 		 <!-- Favicon and touch icons -->
 		 <link rel="icon" type="image/x-ico" href="images/Favicon.png">
@@ -199,11 +199,6 @@
 </style>         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script>
-            if (!window.jQuery) { 
-                document.write('<script src="#\180305\js\jquery-3.2.1.min.js"><\/script><script src="#\180305\js\jquery-ui-1.12.1.min.js"><\/script>'); 
-            }
-        </script>
         <script src="https://www.wedsite.com/180305/js/wedsitecomtop.js"></script>
     </head><body> 
     <!--<div class="loader">
