--- a/index.html
+++ b/index.html
@@ -2134,6 +2134,6 @@ $.post("guestbook.php",
 </footer>
 </body>    
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>
-<script src="https://www.wedsite.com/180208/js/wedsitecombottom.js"></script>
+<script src="180208/js/wedsitecombottom.js"></script>
 
 </html>
