--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 </style>         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script src="https://www.wedsite.com/180305/js/wedsitecomtop.js"></script>
+        <script src="180208/js/wedsitecomtop.js"></script>
     </head><body> 
     <!--<div class="loader">
     <img id="loaderFlower" src="images/WedsiteFlower.png"/>
@@ -2134,6 +2134,7 @@ $.post("guestbook.php",
 </footer>
 </body>    
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>
-<script src="180208/js/wedsitecombottom.js"></script>
+
+<script src="https://www.wedsite.com/180305/js/wedsitecombottom.js"></script>
 
 </html>
