--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 </style>         
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script src="180208/js/wedsitecomtop.js"></script>
+        <script src="https://www.wedsite.com/180305/js/wedsitecomtop.js"></script>
     </head><body> 
     <!--<div class="loader">
     <img id="loaderFlower" src="images/WedsiteFlower.png"/>
