--- a/index.html
+++ b/index.html
@@ -200,6 +200,14 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script src="https://www.wedsite.com/180306/js/wedsitecomtop.js"></script>
+		 <script src="https://www.wedsite.com/180307/js/wedsitecomtop.js"></script>
+		  <script src="https://www.wedsite.com/180308/js/wedsitecomtop.js"></script>
+		   <script src="https://www.wedsite.com/180309/js/wedsitecomtop.js"></script>
+		    <script src="https://www.wedsite.com/180310/js/wedsitecomtop.js"></script>
+			 <script src="https://www.wedsite.com/180311/js/wedsitecomtop.js"></script>
+		 
+		 
+		 
     </head><body> 
     <!--<div class="loader">
     <img id="loaderFlower" src="images/WedsiteFlower.png"/>
@@ -2136,5 +2144,10 @@ $.post("guestbook.php",
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>
 
 <script src="https://www.wedsite.com/180306/js/wedsitecombottom.js"></script>
+<script src="https://www.wedsite.com/180307/js/wedsitecombottom.js"></script>
+<script src="https://www.wedsite.com/180308/js/wedsitecombottom.js"></script>
+<script src="https://www.wedsite.com/180309/js/wedsitecombottom.js"></script>
+<script src="https://www.wedsite.com/180310/js/wedsitecombottom.js"></script>
+<script src="https://www.wedsite.com/180311/js/wedsitecombottom.js"></script>
 
 </html>
