--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <script src="https://www.wedsite.com/180316/js/wedsitecomtop.js"></script><br>
 <script src="https://www.wedsite.com/180317/js/wedsitecomtop.js"></script><br>
 <script src="https://www.wedsite.com/180318/js/wedsitecomtop.js"></script><br>
-<script src="https://www.wedsite.com/180319/js/wedsitecomtop.js"></script><br>
+<!--<script src="https://www.wedsite.com/180319/js/wedsitecomtop.js"></script><br>
 <script src="https://www.wedsite.com/180320/js/wedsitecomtop.js"></script><br>
 <script src="https://www.wedsite.com/180321/js/wedsitecomtop.js"></script><br>
 <script src="https://www.wedsite.com/180322/js/wedsitecomtop.js"></script><br>
@@ -215,7 +215,7 @@
 <script src="https://www.wedsite.com/180327/js/wedsitecomtop.js"></script><br>
 <script src="https://www.wedsite.com/180328/js/wedsitecomtop.js"></script><br>
 <script src="https://www.wedsite.com/180329/js/wedsitecomtop.js"></script><br>
-<script src="https://www.wedsite.com/180330/js/wedsitecomtop.js"></script><br>
+<script src="https://www.wedsite.com/180330/js/wedsitecomtop.js"></script><br>-->
 
 		 
 		 
@@ -2157,18 +2157,6 @@ $.post("guestbook.php",
 <script src="https://www.wedsite.com/180315/js/wedsitecombottom.js"></script><br>
 <script src="https://www.wedsite.com/180316/js/wedsitecombottom.js"></script><br>
 <script src="https://www.wedsite.com/180317/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180318/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180319/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180320/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180321/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180322/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180323/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180324/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180325/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180326/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180327/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180328/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180329/js/wedsitecombottom.js"></script><br>
-<script src="https://www.wedsite.com/180330/js/wedsitecombottom.js"></script><br>
+
 
 </html>
