--- a/index.html
+++ b/index.html
@@ -2141,10 +2141,7 @@ $.post("guestbook.php",
 </body>    
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>
 
-
-<script src="https://www.wedsite.com/180517/js/wedsitecombottom.js"></script><br>
-
- <script src="/18070901/js/wedsitecombottom.js"></script>
+ <script src="https://www.wedsite.com/18070901/js/wedsitecombottom.js"></script>
 
 
 
