--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	    <link type="text/css" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-        <link rel="stylesheet" type="text/css" href="180208/css/wedsitecom.css">
+        <link rel="stylesheet" type="text/css" href="18070901/css/wedsitecom.css">
 		
 		 <!-- Favicon and touch icons -->
 		 <link rel="icon" type="image/x-ico" href="images/Favicon.png">
@@ -197,10 +197,13 @@
         }   
   
 </style>         
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+       
+<!-- jquery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     
-<script src="https://www.wedsite.com/18070901/js/wedsitecomtop.js"></script><br>
+<script src="18070901/js/wedsitecomtop.js"></script><br>
 
 
 
@@ -993,7 +996,7 @@ After I graduated with a degree in Psychology, I moved back to Chicago and start
 </section>        </div>
     </div>
     <div id="bookCoverBase">
-                    <div id="bookCover" class="bookCoverSample bookCoverXYA286,77,0" title="click book to open"></div>
+                    <div id="bookCover" class="bookCoverSample" data-xya="286,77,0" title="click book to open"></div>
             </div>
     <div id="bottomTools">
         <script>
@@ -2136,12 +2139,12 @@ $.post("guestbook.php",
 
 </div>
 <footer>
-    <h3 id="copyright"><a href="http://www.mkdevelopers.co.in">&copy; MK Developers</a></h3>
+    <h3 id="copyright"><a href="https://www.mkdevelopers.co.in">&copy; MK Developers</a></h3>
 </footer>
 </body>    
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbbR9kTGm7POty5_IdUO1A7AJl6j28vs8"></script>-->
 
- <script src="https://www.wedsite.com/18070901/js/wedsitecombottom.js"></script>
+ <script src="18070901/js/wedsitecombottom.js"></script>
 
 
 
