--- a/sample/index.html
+++ b/sample/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://weddiing.mkdevelopers.co.in/" />
+<meta http-equiv="refresh" content="0; url=http://weddiing.mkdevelopers.co.in/sample" />
